; ModuleID = '/home/carl/AnghaBench/jq/src/decNumber/extr_decNumber.c_decNumberReduce.c'
source_filename = "/home/carl/AnghaBench/jq/src/decNumber/extr_decNumber.c_decNumberReduce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_27__ = type { i64 }
%struct.TYPE_28__ = type { i64, i32 }

@DECUNUSED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_27__* @decNumberReduce(%struct.TYPE_27__* %0, %struct.TYPE_27__* %1, %struct.TYPE_28__* %2) #0 {
  %4 = alloca %struct.TYPE_27__*, align 8
  %5 = alloca %struct.TYPE_27__*, align 8
  %6 = alloca %struct.TYPE_28__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.TYPE_27__* %0, %struct.TYPE_27__** %4, align 8
  store %struct.TYPE_27__* %1, %struct.TYPE_27__** %5, align 8
  store %struct.TYPE_28__* %2, %struct.TYPE_28__** %6, align 8
  store i64 0, i64* %7, align 8
  store i32 0, i32* %8, align 4
  br label %10

10:                                               ; preds = %3
  %11 = load %struct.TYPE_27__*, %struct.TYPE_27__** %5, align 8
  %12 = call i64 @decNumberIsNaN(%struct.TYPE_27__* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %10
  %15 = load %struct.TYPE_27__*, %struct.TYPE_27__** %4, align 8
  %16 = load %struct.TYPE_27__*, %struct.TYPE_27__** %5, align 8
  %17 = load %struct.TYPE_28__*, %struct.TYPE_28__** %6, align 8
  %18 = call i32 @decNaNs(%struct.TYPE_27__* %15, %struct.TYPE_27__* %16, i32* null, %struct.TYPE_28__* %17, i64* %7)
  br label %30

19:                                               ; preds = %10
  %20 = load %struct.TYPE_27__*, %struct.TYPE_27__** %4, align 8
  %21 = load %struct.TYPE_27__*, %struct.TYPE_27__** %5, align 8
  %22 = load %struct.TYPE_28__*, %struct.TYPE_28__** %6, align 8
  %23 = call i32 @decCopyFit(%struct.TYPE_27__* %20, %struct.TYPE_27__* %21, %struct.TYPE_28__* %22, i32* %8, i64* %7)
  %24 = load %struct.TYPE_27__*, %struct.TYPE_27__** %4, align 8
  %25 = load %struct.TYPE_28__*, %struct.TYPE_28__** %6, align 8
  %26 = call i32 @decFinish(%struct.TYPE_27__* %24, %struct.TYPE_28__* %25, i32* %8, i64* %7)
  %27 = load %struct.TYPE_27__*, %struct.TYPE_27__** %4, align 8
  %28 = load %struct.TYPE_28__*, %struct.TYPE_28__** %6, align 8
  %29 = call i32 @decTrim(%struct.TYPE_27__* %27, %struct.TYPE_28__* %28, i32 1, i32 0, i32* %9)
  br label %30

30:                                               ; preds = %19, %14
  %31 = load i64, i64* %7, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %38

33:                                               ; preds = %30
  %34 = load %struct.TYPE_27__*, %struct.TYPE_27__** %4, align 8
  %35 = load i64, i64* %7, align 8
  %36 = load %struct.TYPE_28__*, %struct.TYPE_28__** %6, align 8
  %37 = call i32 @decStatus(%struct.TYPE_27__* %34, i64 %35, %struct.TYPE_28__* %36)
  br label %38

38:                                               ; preds = %33, %30
  %39 = load %struct.TYPE_27__*, %struct.TYPE_27__** %4, align 8
  ret %struct.TYPE_27__* %39
}

declare dso_local i64 @decNumberIsNaN(%struct.TYPE_27__*) #1

declare dso_local i32 @decNaNs(%struct.TYPE_27__*, %struct.TYPE_27__*, i32*, %struct.TYPE_28__*, i64*) #1

declare dso_local i32 @decCopyFit(%struct.TYPE_27__*, %struct.TYPE_27__*, %struct.TYPE_28__*, i32*, i64*) #1

declare dso_local i32 @decFinish(%struct.TYPE_27__*, %struct.TYPE_28__*, i32*, i64*) #1

declare dso_local i32 @decTrim(%struct.TYPE_27__*, %struct.TYPE_28__*, i32, i32, i32*) #1

declare dso_local i32 @decStatus(%struct.TYPE_27__*, i64, %struct.TYPE_28__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
